# gpt-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  EXAMPLE.md  EXAMPLES.md  MCP_SETUP.md  README.md  mcp.json  mcp.json.example  pyproject.toml
src/: __init__.py  server.py
